<resources>
    <string name="app_name">Tour Guide</string>
    <string name="navigation_open">Open Navigation</string>
    <string name="navigation_close">Close Navigation</string>
    <string name="tab_eat">Eat</string>
    <string name="tab_bar">Bars</string>
    <string name="tab_fav">Favs</string>
    <string name="barca">Barcelona</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="activities">Activities</string>
    <string name="transportation">Transportation</string>
    <string name="transportation1">Transportation 1</string>
    <string name="transportation2">Transportation 2</string>
    <string name="motto">More Than A City</string>
    <string name="barca_flag_desc">Barcelona Flag</string>
    <string name="activities_title">Things To Do...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
