<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group android:checkableBehavior="single">
    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item android:id="@+id/nav_food"
        android:icon="@drawable/ic_food"
        android:title="@string/food"/>
    <item android:id="@+id/nav_fau"
        android:icon="@drawable/ic_school"
        android:title="FAU"/>
    <item android:id="@+id/nav_todo"
        android:icon="@drawable/ic_todo"
        android:title="@string/activities"/>
</group>
    <!--do actions-->
    <item android:title="@string/transportation">
        <menu>
            <item android:id="@+id/transportation1"
                android:icon="@drawable/ic_car"
                android:title="@string/transportation1"/>
            <item android:id="@+id/transportation2"
                android:icon="@drawable/ic_tri"
                android:title="@string/transportation2"/>
        </menu>
    </item>
</menu>