<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/mainColor"
    android:gravity="bottom"
    android:padding="@dimen/sixteen"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:layout_editor_absoluteY="@dimen/twentyfive">

    <ImageView
        android:id="@+id/header_pic_IV"
        android:layout_width="@dimen/nav_flag_width"
        android:layout_height="@dimen/nav_flag_height"
        android:layout_marginBottom="@dimen/sixteen"
        android:layout_marginLeft="@dimen/four"
        android:layout_marginStart="@dimen/four"
        android:layout_marginTop="@dimen/sixteen"
        android:scaleType="fitXY"
        android:src="@drawable/barca_flag"
        android:contentDescription="@string/barca_flag_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_TV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight"
        android:layout_marginEnd="@dimen/thirtytwo"
        android:layout_marginLeft="@dimen/thirtytwo"
        android:layout_marginRight="@dimen/thirtytwo"
        android:layout_marginStart="@dimen/thirtytwo"
        android:layout_marginTop="@dimen/eight"
        android:maxLines="1"
        android:paddingTop="@dimen/eight"
        android:text="@string/barca"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/twentyfive_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/header_TV2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/header_pic_IV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/header_TV2"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:text="@string/motto"
        app:layout_constraintBottom_toBottomOf="@+id/header_pic_IV"
        app:layout_constraintEnd_toEndOf="@+id/header_TV1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/header_TV1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:gravity="center_horizontal"/>
</android.support.constraint.ConstraintLayout>